[package]
name = "network"
version = "0.1.0"
edition = "2021"

authors = ["Utee Akaninyene <github.com/Xlaez>"]
license = "MIT"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dev-dependencies]
simple_logger = "2.1.0"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
crossbeam-channel = "~0.5"
# serde = { version = "~1.0", features = ["derive"] }
bincode = "~1.3"
hashbrown = "~0.12"
log = "~0.4"
